fix toolbar alignment in mobile.
ammend 8f2aa159ea31dc385940e53648a93a36b73d80b4

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -352,9 +352,8 @@ input[type="checkbox"]:checked + label:before {
     }
   }
 
-  #bottom-action + .map-toolbar {
-    position: relative;
-    bottom: 45px;
+  #bottom-action + #map-toolbar {
+    bottom: 65px;
   }
 
   .nav-back {
